método extra get user id
