# public/swagger.yaml
@@ -106,6 +106,32 @@ paths:
                   - $ref: '#/components/schemas/monedas'
                   - $ref: '#/components/schemas/profilephoto'
 
+  /users/userid:
+    put:
+      tags:
+        - Usuario
+      summary: Obtención ID de usuario
+      requestBody:
+        description: nickname o email del usuario (uno de los dos)
+        required: true
+        content:
+          row/json:
+            schema:
+              oneOf:
+                - $ref: '#/components/schemas/nickname'
+                - $ref: '#/components/schemas/email'
+      responses:
+        '200':
+          description: Usuario existente
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/InternalError'
+
   /users/register/{id_usuario}:
     delete:
       tags:
